tests/codegen/fail/029-array-slice-atleast-size-one.hyg
let arr: array {int} = array(2 + 2, 40 + 2);
let sliced: array {int} = arraySlice(arr, 1, 1);
sliced